Fix broken CSS

--- a/source/_themes/ukf/static/css/style.css
+++ b/source/_themes/ukf/static/css/style.css
@@ -110,19 +110,19 @@ h2 a {
     float: left;
     margin-right: 5px;
 }
-  
+
 
 @media only screen and (min-width: 991px){
     #content-container {margin-left: 250px;}
 }
 
-/* 
+/*
 Sphinx now adds a paragraph to unordered lists,
 creating some annoying spacing.
 https://stackoverflow.com/questions/49700502/inconsistent-line-spacing-in-restructuredtext-document
 This change should fix that without making changes to the sphinx source or downgrading the html renderer to v4.
 */
-.simple > li > p { margin: 0 0 -5px } 
+.simple > li > p { margin: 0 0 -5px }
 
 
 /* Preformatted text */
@@ -1693,7 +1693,7 @@ header {
 }
 
 .nav-up {
-    top: -76px;fonr
+    top: -76px;
 }
 
 #sub {
